sq fixes